Fixed CSS code for grids on smaller screens!

--- a/_sass/_aboutflexgrid.scss
+++ b/_sass/_aboutflexgrid.scss
@@ -164,6 +164,12 @@
                 max-width: 50%;
               }
            }
+           @media screen and (max-width: 450px) {
+              .col-portfolio {
+                flex: 100%;
+                max-width: 100%;
+              }
+           }
            .title {
               display: flex;
               flex: 100%;
